web: remove since got CN topic in Telegram group

--- a/zh/index.html
+++ b/zh/index.html
@@ -129,7 +129,7 @@
     <section id="contact" class="py-5">
         <div class="container text-center">
             <h2 class="mb-4">闲聊吹水</h2>
-            <p>有任何使用上的疑问或者对本项目有什么爆炸性的好点子，欢迎来银趴群相互交♂流（<strong>仅接受英文</strong>）</p>
+            <p>有任何使用上的疑问或者对本项目有什么爆炸性的好点子，欢迎来银趴群相互交♂流</p>
             <div class="contact-icons">
                 <a href="https://github.com/rifsxd/KernelSU-Next/issues" target="_blank">
                     <i class="fab fa-github"></i>
