--- a/zh/pages/devices.html
+++ b/zh/pages/devices.html
@@ -461,7 +461,18 @@
                             <td><a href="https://github.com/bavalucket/android_kernel_samsung_n770f" target="_blank">android_kernel_samsung_n770f</a></td>
                             <td>Samsung Galaxy Note 10 Lite</td>
 			</tr>
-			    
+
+			<tr>
+                            <td>
+                                <a href="https://github.com/Sexynos990" target="_blank" style="display: flex; align-items: center; gap: 10px;">
+                                    <img src="https://avatars.githubusercontent.com/Sexynos990?v=4" alt="Sexynos990" class="rounded-circle" width="30" height="30" style="margin-right: 10px;">
+                                    <span>Sexynos990</span>
+                                </a>
+                            </td>
+                            <td><a href="https://github.com/Sexynos990/eyeless" target="_blank">android_kernel_samsung_990</a></td>
+                            <td>Wonky kernel made for the exynos990 made from user for users reqests are open</td>
+                        </tr>
+
                         <!-- <tr>
                             <td>Example maintainer</td>
                             <td><a href="https://github.com/example/example" target="_blank">example repo name</a></td>
