--- a/zh/pages/devices.html
+++ b/zh/pages/devices.html
@@ -469,7 +469,7 @@
                                     <span>Sexynos990</span>
                                 </a>
                             </td>
-                            <td><a href="https://github.com/Sexynos990/eyeless" target="_blank">android_kernel_samsung_990</a></td>
+                            <td><a href="https://github.com/Sexynos990/eyeless-kernel" target="_blank">android_kernel_samsung_990</a></td>
                             <td>Wonky kernel made for the exynos990 made from user for users reqests are open</td>
                         </tr>
 
